--- a/style/home.css
+++ b/style/home.css
@@ -1,6 +1,7 @@
 body {
-    background: #fff;
-    margin: 0
+    background: #fafafa;
+    margin: 0;
+    font-family: 'Open Sans', sans-serif;
 }
 
 header {
@@ -20,6 +21,69 @@ header a {
     font-size: 25px;
     width: 25%;
 }
+
 header a>.fa-heart-o:hover {
-  color: #ed4956;
+    color: #ed4956;
+}
+
+.container {
+    margin: 60px auto 0 auto;
+    border-radius: .3%;
+    max-width: 600px;
+    width: 100%;
+    box-sizing: border-box;
+    padding: 0;
+}
+
+.user {
+    padding: 14px 20px;
+    box-sizing: border-box;
+    height: 64px;
+    line-height: 30px;
+    border: .2px solid #e1e1e1;
+    background: white;
+}
+
+.user div {
+    display: inline-block;
+}
+
+.user .userPic {
+    width: 30px;
+    height: 30px;
+    background: blue;
+    border-radius: 50%;
+    position: relative;
+    float: left;
+}
+
+.user .userName {
+    color: #262626;
+    padding-left: 5px;
+    float: left;
+    font-weight: 600;
+    color: #262626;
+}
+
+.user .time {
+    float: right;
+    color: #999;
+}
+
+.pic {
+    width: 600px;
+    height: 600px;
+    box-sizing: border-box;
+    border-left: .2px solid #e1e1e1;
+    border-right: .2px solid #e1e1e1;
+
+}
+
+.pic img {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+}
+.comment {
+  width: 600px;
 }
