--- a/style/home.css
+++ b/style/home.css
@@ -2,17 +2,22 @@ body {
     background: #fafafa;
     margin: 0;
     font-family: 'Open Sans', sans-serif;
+    width: 100%;
 }
-span{
-  color: #93a8bd;
+
+span {
+    color: #003569;
+    ;
 }
-header {
+
+.header {
+  display: block;
     background: #fafafa;
     border-bottom: 1px solid rgba(0, 0, 0, .0975);
     width: 100%;
 }
 
-header a {
+.header a {
     text-decoration: none;
     color: black;
     text-align: center;
@@ -23,10 +28,12 @@ header a {
     font-size: 25px;
     width: 25%;
 }
-hr{
-  margin: 0 auto;
+
+hr {
+    margin: 0 auto;
 }
-header a>.fa-heart-o:hover {
+
+.header a>.fa-heart-o:hover {
     color: #ed4956;
 }
 
@@ -40,20 +47,22 @@ header a>.fa-heart-o:hover {
     padding-bottom: 5px;
 }
 
+
 .user {
     padding: 14px 20px;
     box-sizing: border-box;
     height: 64px;
     line-height: 30px;
-border: .2px solid #e1e1e1;
+    border: .2px solid #e1e1e1;
     background: white;
+    width: 600px;
 }
 
 .user div {
     display: inline-block;
 }
 
-.user .userPic {
+.user .userPic,.userPic img{
     width: 30px;
     height: 30px;
     background: blue;
@@ -61,6 +70,8 @@ border: .2px solid #e1e1e1;
     position: relative;
     float: left;
 }
+
+
 
 .user .userName {
     color: #262626;
@@ -81,39 +92,66 @@ border: .2px solid #e1e1e1;
     box-sizing: border-box;
     border-left: .2px solid #e1e1e1;
     border-right: .2px solid #e1e1e1;
-
+}
+.pic div{
+  /*position: absolute;*/
 }
 
 .pic img {
     width: 100%;
     height: 100%;
     margin: 0;
+    position: relative;
+
 }
+
 .footer {
-padding: 16px;
-  box-sizing: border-box;
-  border: .2px solid #e1e1e1;
+    padding: 16px;
+    box-sizing: border-box;
+    border: .2px solid #e1e1e1;
+    width: 600px;
 }
-.likes{
-  font-weight: bold;
+
+.likes {
+    font-weight: bold;
 }
-.allComments{
-  color: #b9bab8;
+
+.allComments {
+    color: #b9bab8;
 }
+
 .addComments{
-  color: red;
-  width: 100%;
-  height: 25px;
-  font-size: 24px;
-  box-sizing: border-box;
+    width: 100%;
+    height: 25px;
+    font-size: 24px;
+    box-sizing: border-box;
 }
-.addComments input{
-  border: none;
-  width: 90%;
-  box-sizing: border-box;
-  padding-left: 5px;
-  color: #262626;
+
+.addComments input {
+    border: none;
+    box-sizing: border-box;
+    padding-left: 5px;
+    color: #262626;
 }
-.addComments input:focus{
-outline: none;
+.pic .pheart{
+  display: none;
+  font-size: 150px;
+   z-index: 1;
+  text-align: center;
+  width: 600px;
+  margin-top: 200px;
+  position: absolute;
+  color: #ededec;
+
+}
+
+.addComments input:focus {
+    outline: none;
+}
+
+.fa-ellipsis-h {
+    float: right;
+}
+.footer .fa-heart{
+  color: #ed4956;
 }
